--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome to Kokoa</title>
+    <title>Welcome to Kokoa Clone</title>
   </head>
   <body>
-    <div id="status-bar">
+    <div class="status-bar">
       <div class="status-bar__column">
-        <span>No Service </span>
+        <span>No Service</span>
         <i class="fa-solid fa-wifi"></i>
       </div>
       <div class="status-bar__column">
@@ -20,6 +21,21 @@
         <i class="fa-solid fa-bolt"></i>
       </div>
     </div>
+
+    <header class="welcome-header">
+      <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
+      <p class="welcome-header__text">
+        If you have a Kokoa Account, Llog in with your email or phone number.
+      </p>
+    </header>
+
+    <form id="login-form">
+      <input type="text" placerholder="Email or Phone number" />
+      <input type="password" placerholder="Password" />
+      <input type="submit" value="Log in" />
+      <a href="#">Find Kokoa Account Password</a>
+    </form>
+
     <script
       src="https://kit.fontawesome.com/80368c20b6.js"
       crossorigin="anonymous"
