--- a/index.html
+++ b/index.html
@@ -29,11 +29,16 @@
       </p>
     </header>
 
-    <form id="login-form">
-      <input type="text" placerholder="Email or Phone number" />
-      <input type="password" placerholder="Password" />
+    <form action="friends.html" method="get" id="login-form">
+      <input
+        name="username"
+        required
+        type="text"
+        placeholder="Email or Phone number"
+      />
+      <input name="password" required type="password" placeholder="Password" />
       <input type="submit" value="Log in" />
-      <a href="#">Find Kokoa Account Password</a>
+      <a href="#">Find Kokoa Account or Password</a>
     </form>
 
     <script
