--- a/friends.html
+++ b/friends.html
@@ -22,6 +22,35 @@
       </div>
     </div>
 
+    <header class="screen-header">
+      <h1 class="screen-header__title">Friends</h1>
+      <div class="screen-header__icons">
+        <span><i class="fas fa-search fa-lg"></i></span>
+        <span><i class="fa-solid fa-music fa-lg"></i></span>
+        <span><i class="fa-solid fa-gear fa-lg"></i></span>
+      </div>
+    </header>
+
+    <a id="friends-display-link">
+      <i class="fa-solid fa-circle-info"></i>
+      Friends' Names Display
+      <i class="fa-solid fa-chevron-right fa-xs"></i>
+    </a>
+
+    <div class="user-component">
+      <div class="user-component__column">
+        <img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJlRRKlEqXdd9n0DRmUtFaCpf1fWjB2Y89_g&s"
+          class="user-component__avatar"
+        />
+        <div class="user-component__text">
+          <h4 class="user-component__title">Flamingo</h4>
+          <h6 class="user-component__subtitle">this text whatever</h6>
+        </div>
+      </div>
+      <div class="user-component__column"></div>
+    </div>
+
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
@@ -41,9 +70,10 @@
           </a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#"
-            ><i class="fa-solid fa-ellipsis fa-2x"></i
-          ></a>
+          <a class="nav__link" href="#">
+            <span class="nav__notification2"></span>
+            <i class="fa-solid fa-ellipsis fa-2x"></i>
+          </a>
         </li>
       </ul>
     </nav>
