Friends page done

--- a/friends.html
+++ b/friends.html
@@ -17,7 +17,7 @@
       </div>
       <div class="status-bar__column">
         <span>111%</span>
-        <i class="fa-solid fa-battery-full"></i>
+        <i class="fa-solid fa-battery-full fa-lg"></i>
         <i class="fa-solid fa-bolt"></i>
       </div>
     </div>
@@ -37,19 +37,45 @@
       <i class="fa-solid fa-chevron-right fa-xs"></i>
     </a>
 
-    <div class="user-component">
-      <div class="user-component__column">
-        <img
-          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJlRRKlEqXdd9n0DRmUtFaCpf1fWjB2Y89_g&s"
-          class="user-component__avatar"
-        />
-        <div class="user-component__text">
-          <h4 class="user-component__title">Flamingo</h4>
-          <h6 class="user-component__subtitle">this text whatever</h6>
+    <main class="friends-screen">
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJlRRKlEqXdd9n0DRmUtFaCpf1fWjB2Y89_g&s"
+            class="user-component__avatar user-component__avatar--xl"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">Flamingo</h4>
+            <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
+          </div>
+        </div>
+        <div class="user-component__column"></div>
+      </div>
+      <div class="friends-screen__channel">
+        <div class="friends-screen__channel-header">
+          <span>Channel</span>
+          <i class="fa-solid fa-chevron-up fa-xs"></i>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJlRRKlEqXdd9n0DRmUtFaCpf1fWjB2Y89_g&s"
+              class="user-component__avatar user-component__avatar--xm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Channel
+              </h4>
+              <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span>2</span>
+            <i class="fa-solid fa-chevron-right fa-xs"></i>
+          </div>
         </div>
       </div>
-      <div class="user-component__column"></div>
-    </div>
+    </main>
 
     <nav class="nav">
       <ul class="nav__list">
