--- a/chats.html
+++ b/chats.html
@@ -51,6 +51,25 @@
           <div class="badge">1</div>
         </div>
       </div>
+
+      <div class="user-component">
+        <div class="user-component__column">
+          <img
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJlRRKlEqXdd9n0DRmUtFaCpf1fWjB2Y89_g&s"
+            class="user-component__avatar"
+          />
+          <div class="user-component__text">
+            <h4 class="user-component__title">Flamingo</h4>
+            <h6 class="user-component__subtitle">
+              Please Check My Kokoa Account Info
+            </h6>
+          </div>
+        </div>
+        <div class="user-component__column">
+          <span class="user-component__time">21:22</span>
+          <div class="badge">1</div>
+        </div>
+      </div>
     </main>
 
     <nav class="nav">
