--- a/more.html
+++ b/more.html
@@ -28,9 +28,11 @@
         <span><i class="fas fa-search fa-lg"></i></span>
         <span><i class="fas fa-music fa-lg"></i></span>
         <span>
-          <i class="fa-solid fa-gear fa-lg">
-            <span class="screen-header__notification"></span>
-          </i>
+            <a href="settings.html">
+                <i class="fa-solid fa-gear fa-lg">
+                    <span class="screen-header__notification"></span>
+                  </i>
+            </a>
         </span>
       </div>
     </header>
