--- a/chat.html
+++ b/chat.html
@@ -24,7 +24,7 @@
 
     <header class="alt-header">
       <div class="alt-header__column">
-        <a href="more.html">
+        <a href="chats.html">
           <i class="fas fa-angle-left fa-2x"></i>
         </a>
       </div>
@@ -36,8 +36,10 @@
         <span><i class="fas fa-bars fa-lg"></i></span>
       </div>
     </header>
-
-    <main class="main-screen"></main>
+    <div class="invisible-div">For Adjusting Chat</div>
+    <main class="main-screen main-chat">
+      <div class="chat__timestamp">Tuesday, January 7, 2025</div>
+    </main>
 
     <script
       src="https://kit.fontawesome.com/80368c20b6.js"
