--- a/chat.html
+++ b/chat.html
@@ -36,9 +36,19 @@
         <span><i class="fas fa-bars fa-lg"></i></span>
       </div>
     </header>
-    <div class="invisible-div">For Adjusting Chat</div>
+
     <main class="main-screen main-chat">
       <div class="chat__timestamp">Tuesday, January 7, 2025</div>
+      <div class="message-row">
+        <img src="screenshots/giga.png" />
+        <div class="message-row__content">
+          <span class="message__author">Flamingo</span>
+          <div class="message__info">
+            <span class="message__bubble">Hi!</span>
+            <span class="message__time">21:27</span>
+          </div>
+        </div>
+      </div>
     </main>
 
     <script
