--- a/chat.html
+++ b/chat.html
@@ -72,7 +72,8 @@
         </button>
       </div>
     </form>
-
+    <div id="no-mobile">Your screen is too big</div>
+    
     <script
       src="https://kit.fontawesome.com/80368c20b6.js"
       crossorigin="anonymous"
