--- a/find.html
+++ b/find.html
@@ -115,6 +115,9 @@
         </li>
       </ul>
     </nav>
+
+    <div id="no-mobile">Your screen is too big</div>
+
     <script
       src="https://kit.fontawesome.com/80368c20b6.js"
       crossorigin="anonymous"
