--- a/friends.html
+++ b/friends.html
@@ -105,6 +105,13 @@
         </li>
       </ul>
     </nav>
+
+    <div id="splash-screen">
+      <i class="fas fa-comment fa-2x"></i>
+    </div>
+
+    <div id="no-mobile">Your screen is too big</div>
+
     <script
       src="https://kit.fontawesome.com/80368c20b6.js"
       crossorigin="anonymous"
