--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
       <a href="#">Find Kokoa Account or Password</a>
     </form>
 
+    <div id="no-mobile">Your screen is too big</div>
+
     <script
       src="https://kit.fontawesome.com/80368c20b6.js"
       crossorigin="anonymous"
