--- a/more.html
+++ b/more.html
@@ -30,8 +30,8 @@
         <span>
             <a href="settings.html">
                 <i class="fa-solid fa-gear fa-lg">
-                    <span class="screen-header__notification"></span>
-                  </i>
+                  <span class="screen-header__notification"></span>
+                </i>
             </a>
         </span>
       </div>
@@ -87,6 +87,9 @@
             </div>
         </div>
     </main>
+
+
+    <div id="no-mobile">Your screen is too big</div>
 
     <nav class="nav">
       <ul class="nav__list">
