--- a/chats.html
+++ b/chats.html
@@ -36,12 +36,9 @@
       <a href="chat.html">
         <div class="user-component">
           <div class="user-component__column">
-            <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJlRRKlEqXdd9n0DRmUtFaCpf1fWjB2Y89_g&s"
-              class="user-component__avatar"
-            />
+            <img src="screenshots/giga.png" class="user-component__avatar" />
             <div class="user-component__text">
-              <h4 class="user-component__title">Flamingo</h4>
+              <h4 class="user-component__title">GigaHwal</h4>
               <h6 class="user-component__subtitle">
                 Please Check My Kokoa Account Info
               </h6>
@@ -57,12 +54,9 @@
       <a href="chat.html">
         <div class="user-component">
           <div class="user-component__column">
-            <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJlRRKlEqXdd9n0DRmUtFaCpf1fWjB2Y89_g&s"
-              class="user-component__avatar"
-            />
+            <img src="screenshots/giga.png" class="user-component__avatar" />
             <div class="user-component__text">
-              <h4 class="user-component__title">Flamingo</h4>
+              <h4 class="user-component__title">GigaHwal</h4>
               <h6 class="user-component__subtitle">
                 Please Check My Kokoa Account Info
               </h6>
