--- a/find.html
+++ b/find.html
@@ -68,8 +68,8 @@
         </div>
         <div class="open-post">
           <div class="open-post__column">
-            <h5 class="open-post__title">#BTS</h5>
-            <h6 class="open-post__hashtags">#bts#army#friends</h6>
+            <h5 class="open-post__title">#活侠传</h5>
+            <h6 class="open-post__hashtags">#活侠传#army#friends</h6>
             <div class="open-post__members">
               <img src="screenshots/giga.png" />
               <span class="open-post__member-count">802 members</span>
