Images are changed

--- a/chats.html
+++ b/chats.html
@@ -36,10 +36,7 @@
       <a href="chat.html">
         <div class="user-component">
           <div class="user-component__column">
-            <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJlRRKlEqXdd9n0DRmUtFaCpf1fWjB2Y89_g&s"
-              class="user-component__avatar"
-            />
+            <img src="screenshots/giga.png" class="user-component__avatar" />
             <div class="user-component__text">
               <h4 class="user-component__title">Flamingo</h4>
               <h6 class="user-component__subtitle">
@@ -57,10 +54,7 @@
       <a href="chat.html">
         <div class="user-component">
           <div class="user-component__column">
-            <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJlRRKlEqXdd9n0DRmUtFaCpf1fWjB2Y89_g&s"
-              class="user-component__avatar"
-            />
+            <img src="screenshots/giga.png" class="user-component__avatar" />
             <div class="user-component__text">
               <h4 class="user-component__title">Flamingo</h4>
               <h6 class="user-component__subtitle">
