--- a/chat.html
+++ b/chat.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat with Flamingo - Kokoa Clone</title>
+    <title>Chat with GigaHwal - Kokoa Clone</title>
   </head>
   <body id="chat-screen">
     <div class="status-bar">
@@ -29,7 +29,7 @@
         </a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">Flamingo</h1>
+        <h1 class="alt-header__title">GigaHwal</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fas fa-search fa-lg"></i></span>
@@ -42,7 +42,7 @@
       <div class="message-row">
         <img src="screenshots/giga.png" />
         <div class="message-row__content">
-          <span class="message__author">Flamingo</span>
+          <span class="message__author">GigaHwal</span>
           <div class="message__info">
             <span class="message__bubble">Hi!</span>
             <span class="message__time">21:27</span>
@@ -73,7 +73,7 @@
       </div>
     </form>
     <div id="no-mobile">Your screen is too big</div>
-    
+
     <script
       src="https://kit.fontawesome.com/80368c20b6.js"
       crossorigin="anonymous"
