--- a/chats.html
+++ b/chats.html
@@ -38,7 +38,7 @@
           <div class="user-component__column">
             <img src="screenshots/giga.png" class="user-component__avatar" />
             <div class="user-component__text">
-              <h4 class="user-component__title">Flamingo</h4>
+              <h4 class="user-component__title">GigaHwal</h4>
               <h6 class="user-component__subtitle">
                 Please Check My Kokoa Account Info
               </h6>
@@ -56,7 +56,7 @@
           <div class="user-component__column">
             <img src="screenshots/giga.png" class="user-component__avatar" />
             <div class="user-component__text">
-              <h4 class="user-component__title">Flamingo</h4>
+              <h4 class="user-component__title">GigaHwal</h4>
               <h6 class="user-component__subtitle">
                 Please Check My Kokoa Account Info
               </h6>
