--- a/chats.html
+++ b/chats.html
@@ -36,11 +36,11 @@
       <a href="chat.html">
         <div class="user-component">
           <div class="user-component__column">
-            <img src="screenshots/giga.png" class="user-component__avatar" />
+            <img src="screenshots/johwal.png" class="user-component__avatar" />
             <div class="user-component__text">
-              <h4 class="user-component__title">GigaHwal</h4>
+              <h4 class="user-component__title">조활(외성제자)</h4>
               <h6 class="user-component__subtitle">
-                Please Check My Kokoa Account Info
+                전생에 무슨 못된 짓을 했을까.
               </h6>
             </div>
           </div>
@@ -51,15 +51,16 @@
         </div>
       </a>
 
-      <a href="chat.html">
+      <a href="chat2.html">
         <div class="user-component">
           <div class="user-component__column">
-            <img src="screenshots/giga.png" class="user-component__avatar" />
+            <img
+              src="screenshots/bigbrother.png"
+              class="user-component__avatar"
+            />
             <div class="user-component__text">
-              <h4 class="user-component__title">GigaHwal</h4>
-              <h6 class="user-component__subtitle">
-                Please Check My Kokoa Account Info
-              </h6>
+              <h4 class="user-component__title">당포의(대사형)</h4>
+              <h6 class="user-component__subtitle">소사매 던지러 갈 사람?</h6>
             </div>
           </div>
           <div class="user-component__column">
