New Gear Animation

--- a/chats.html
+++ b/chats.html
@@ -28,7 +28,7 @@
         <span><i class="fas fa-search fa-lg"></i></span>
         <span><i class="far fa-comment-dots fa-lg"></i></span>
         <span><i class="fa-solid fa-music fa-lg"></i></span>
-        <span><i class="fa-solid fa-gear fa-lg"></i></span>
+        <span><i class="fa-solid fa-gear fa-lg only-gear"></i></span>
       </div>
     </header>
 
@@ -39,9 +39,7 @@
             <img src="screenshots/johwal.png" class="user-component__avatar" />
             <div class="user-component__text">
               <h4 class="user-component__title">조활(외성제자)</h4>
-              <h6 class="user-component__subtitle">
-                전생에 무슨 못된 짓을 했을까.
-              </h6>
+              <h6 class="user-component__subtitle">하늘도 무심하지.</h6>
             </div>
           </div>
           <div class="user-component__column">
@@ -64,7 +62,26 @@
             </div>
           </div>
           <div class="user-component__column">
-            <span class="user-component__time">21:22</span>
+            <span class="user-component__time">21:21</span>
+            <div class="badge">1</div>
+          </div>
+        </div>
+      </a>
+
+      <a href="chat3.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="screenshots/littlesister.png"
+              class="user-component__avatar"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title">당묵령(소사매)</h4>
+              <h6 class="user-component__subtitle">종이접기.</h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">21:20</span>
             <div class="badge">1</div>
           </div>
         </div>
@@ -80,7 +97,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
-            <span class="nav__notification badge">1</span>
+            <span class="nav__notification badge">2</span>
             <i class="fas fa-comment fa-2x"></i>
           </a>
         </li>
