--- a/more.html
+++ b/more.html
@@ -29,9 +29,10 @@
         <span><i class="fas fa-music fa-lg"></i></span>
         <span>
             <a href="settings.html">
-                <i class="fa-solid fa-gear fa-lg">
-                  <span class="screen-header__notification"></span>
-                </i>
+              <div class="gear-container">
+                <i class="fa-solid fa-gear fa-lg only-gear"></i>
+                <span class="screen-header__notification"></span>
+              </div>
             </a>
         </span>
       </div>
@@ -100,7 +101,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
-            <span class="nav__notification badge">1</span>
+            <span class="nav__notification badge">2</span>
             <i class="far fa-comment fa-2x"></i>
           </a>
         </li>
