--- a/chat3.html
+++ b/chat3.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat with 조활 - Kokoa Clone</title>
+    <title>Chat with 당묵령 - Kokoa Clone</title>
   </head>
   <body id="chat-screen">
     <div class="status-bar">
@@ -29,7 +29,7 @@
         </a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">조활</h1>
+        <h1 class="alt-header__title">당묵령</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fas fa-search fa-lg"></i></span>
@@ -40,12 +40,12 @@
     <main class="main-screen main-chat">
       <div class="chat__timestamp">Tuesday, January 7, 2025</div>
       <div class="message-row">
-        <img src="screenshots/johwal.png" />
+        <img src="screenshots/littlesister.png" />
         <div class="message-row__content">
-          <span class="message__author">조활</span>
+          <span class="message__author">당묵령(소사매)</span>
           <div class="message__info">
-            <span class="message__bubble">반갑소!</span>
-            <span class="message__time">21:22</span>
+            <span class="message__bubble">반가워요.</span>
+            <span class="message__time">21:20</span>
           </div>
         </div>
       </div>
@@ -54,7 +54,7 @@
         <div class="message-row__content">
           <div class="message__info">
             <span class="message__bubble">Hi nice to meet you!</span>
-            <span class="message__time">21:27</span>
+            <span class="message__time">21:29</span>
           </div>
         </div>
       </div>
