--- a/find.html
+++ b/find.html
@@ -27,9 +27,12 @@
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
         <span>
-          <i class="fa-solid fa-gear fa-lg">
-            <span class="screen-header__notification"></span>
-          </i>
+          <a href="settings.html">
+            <div class="gear-container">
+              <i class="fa-solid fa-gear fa-lg only-gear"></i>
+              <span class="screen-header__notification"></span>
+            </div>
+          </a>
         </span>
       </div>
     </header>
@@ -98,7 +101,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
-            <span class="nav__notification badge">1</span>
+            <span class="nav__notification badge">2</span>
             <i class="far fa-comment fa-2x"></i>
           </a>
         </li>
