--- a/friends.html
+++ b/friends.html
@@ -27,7 +27,7 @@
       <div class="screen-header__icons">
         <span><i class="fas fa-search fa-lg"></i></span>
         <span><i class="fa-solid fa-music fa-lg"></i></span>
-        <span><i class="fa-solid fa-gear fa-lg"></i></span>
+        <span><i class="fa-solid fa-gear fa-lg only-gear"></i></span>
       </div>
     </header>
 
@@ -88,7 +88,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
-            <span class="nav__notification badge">1</span>
+            <span class="nav__notification badge">2</span>
             <i class="fa-regular fa-comment fa-2x"></i>
           </a>
         </li>
